kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-solution-service
spec:
  selector:
    app: devops-solution
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
