kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-solution-ingress
spec:
  rules:
    - host: devops.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-solution-service
                port:
                  number: 80
